# change-git-user

./: .editorconfig  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: add.rs  config.rs  delete.rs  main.rs  select.rs  user.rs
src/cli/: add.rs  delete.rs  mod.rs  select.rs  view.rs
src/prompts/: add.rs  delete.rs  mod.rs  select.rs
