[package]
name = "change-git-user"
version = "1.0.1"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Manage multiple git configurations"
readme = "README.md"
keywords = ["git"]
categories = ["command-line-utilities"]
repository = "https://github.com/spenserblack/change-git-user"
exclude = [
    ".github",
    ".editorconfig",
    ".gitignore",
]

[[bin]]
name = "cgu"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = "2"
console = "0.13"
dialoguer = "0.7"
dirs = { package = "dirs-next", version = "2" }
git2 = { version = "0.13", default-features = false }
indexmap = { version = "1", features = ["serde-1"] }
serde = { version = "1", features = ["derive"] }
toml = "0.5"
