[package]
name = "change-git-user"
version = "1.2.3"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Manage multiple git configurations"
readme = "README.md"
keywords = ["git"]
categories = ["command-line-utilities"]
repository = "https://github.com/spenserblack/change-git-user"
exclude = [
    ".github",
    ".editorconfig",
    ".gitignore",
]

[[bin]]
name = "cgu"
path = "src/main.rs"

[[bin]]
name = "git-change-user"
path = "src/main.rs"

[features]
default = ["prompts", "cli"]
prompts = ["dialoguer"]
cli = ["clap"]

[dependencies]
anyhow = "1"
clap = { version = "2", optional = true }
console = "0.15"
dialoguer = { version = "0.9", optional = true }
dirs = { package = "dirs-next", version = "2" }
git2 = { version = "0.13", default-features = false }
indexmap = { version = "1", features = ["serde-1"] }
serde = { version = "1", features = ["derive"] }
toml = "0.5"
